added hover effect

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="imagebox bg1">
                     <img src="./images/web-developing.svg" alt="service" class="service-img">
                 </div>
-                <div class="service-info-selected">
+                <div class="service-info">
                     <h4 class="service-hdr">
                         Clean Code
                     </h4>
